examples/1-nginx.yml
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: demo
#   labels:
#     istio-injection: enabled
# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-nginx
  namespace: demo
  # annotations:
  #   traffic.sidecar.istio.io/excludeOutboundPorts: "80"
  labels:
    app: demo-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-nginx
  template:
    metadata:
      labels:
        app: demo-nginx
        istio: monitor
    spec:
      containers:
      - name: nginx
        image: nginx:stable
        ports:
        - containerPort: 80
      
      

---
apiVersion: v1
kind: Service
metadata:
  name: demo-nginx
  namespace: demo
  labels:
    app: demo-nginx
spec:
  selector:
    app: demo-nginx
    isio: monitor
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: demo-nginx-envoy
  namespace: demo
  labels:
    app: demo-nginx
spec:
  selector:
    app: demo-nginx
  ports:
    - name: http-envoy-prom
      port: 15090
      targetPort: 15090
      protocol: TCP


---
# =========================
# 5️⃣ Istio Gateway
# =========================
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: demo-nginx-gateway
  namespace: demo
spec:
  selector:
    istio: gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
# =========================
# 6️⃣ Istio VirtualService
# =========================
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: demo-nginx-vs
  namespace: demo
spec:
  hosts:
    - "testo11.local"
  gateways:
    - demo-nginx-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: demo-nginx
            port:
              number: 80
