examples/7-nginx-istio.yml
# =========================
# 1️⃣ Namespace
# =========================
apiVersion: v1
kind: Namespace
metadata:
  name: demo
  labels:
    istio-injection: enabled   # auto-inject sidecar
    release : "kube-prom-stack"
---
# =========================
# 2️⃣ Nginx Deployment
# =========================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: demo
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:stable
          ports:
            - name: http
              containerPort: 80
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: 80
          #   initialDelaySeconds: 3
          #   periodSeconds: 5
          # livenessProbe:
          #   httpGet:
          #     path: /
          #     port: 80
          #   initialDelaySeconds: 10
          #   periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: demo
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP

---
# =========================
# 4️⃣ Service exposing Envoy sidecar metrics
# =========================
apiVersion: v1
kind: Service
metadata:
  name: demo-nginx-envoy
  namespace: demo
  labels:
    app: demo-nginx
spec:
  selector:
    app: demo-nginx
  ports:
    - name: http-envoy-prom
      port: 15090
      targetPort: 15090
      protocol: TCP
---
# =========================
# 5️⃣ Istio Gateway
# =========================
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: demo-nginx-gateway
  namespace: demo
spec:
  selector:
    istio: gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
# =========================
# 6️⃣ Istio VirtualService
# =========================
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: demo-nginx-vs
  namespace: demo
spec:
  hosts:
    - "testo11.local"
  gateways:
    - demo-nginx-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: demo-nginx
            port:
              number: 80
